--- a/Tecno_Coder/package.json
+++ b/Tecno_Coder/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
